# SEI_Playwright

./: README.md  config_sei.json  main copy.py  main.py  pyproject.toml
.github/workflows/: quality.yml
src/: main.py
src/automations/: SEI_DMA.py  SEI_DMA_automation.py  sei_automation.py
src/config/: format_text.py  settings.py
src/ui/: app_window.py
src/ui/views/: login_view.py  menu_view.py  task_view.py
