[project]
name = "sei-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
[tool.black]
line-length = 88
target-version = ['py311']
dependencies = [
    "black>=26.3.1",
    "customtkinter>=5.2.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
]